	Fixed: Don't ask admin for SQL root password when not needed (package maintainer script)
	Fixed: Don't ask admin for data directory (/var/lib/mysql) removal (package maintainer script)
	Fixed: Do not try to receive/download repository gpg key if already present
	Fixed: Missing source repositories in APT sources.list
	Removed: Support for Ubuntu 15.04 (Vivid Vervet)

PLUGINS
	Updated: API version to 1.0.2

YOUTRACK
	#IP-0582 PHP editor - PHP configuration levels (per_user, per_domain and per_site) are ignored
	#IP-1289 ProFTPD with TLS behind NAT - Local IP masquerading and passive port range
	#IP-1397 MySQL "SET PASSWORD" deprecated in version 5.7.6
	#IP-1453 The before/after HttpdAddIps events are not always triggered
	#IP-1482 Add support for MySQL 5.6.x/5.7.x using MySQL Team repositories
	#IP-1483 Perl 5.22 - Unescaped left brace in regex is deprecated
	#IP-1486 Do not place order when a domain alias is created by a mutated user
	#IP-1487 A parent domain owner must not be able to create a subdomain if already used as main domain or domain alias

------------------------------------------------------------------------------------------------------------------------
1.2.11
------------------------------------------------------------------------------------------------------------------------

2016-01-06: Laurent Declercq
	RELEASE i-MSCP 1.2.11

BACKEND
	Fixed: Could not remove service (wrong return value)
	Fixed: iMSCP::Rights::_set: cmod: cannot access '/etc/courier/dhparams.pem' : No such file or directory
	Fixed: Missing variable in sprintf statement (iMSCP::Dir)
	Fixed: Optionnal options must be passed-in to onLoadTemplate listeners (httpd server impls.)

CONFIG
	Removed: ProxyErrorOverride parameter which was introduced in version 1.2.10 (Unexpected 503 errors +++)

PLUGINS
	Updated: API version to 1.0.1

------------------------------------------------------------------------------------------------------------------------
1.2.10